[gd_scene load_steps=4 format=2]

[ext_resource path="res://content/weapons/sword/JavelinBlade.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.5, 21 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.5, 2 )

[node name="JavelinBlade" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="HitArea" type="Area2D" parent="."]
position = Vector2( 0, 5 )
collision_layer = 0
collision_mask = 128

[node name="BladeCollisionShape" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 0, -23 )
shape = SubResource( 1 )

[node name="ArrowHead" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 0, -39 )
shape = SubResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="HitArea" to="." method="_on_HitArea_area_entered"]
[connection signal="area_exited" from="HitArea" to="." method="_on_HitArea_area_exited"]
